--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,7 @@
                   <h4 class="mr-1">{{ "${:,.2f}".format(oferta.price) }}</h4>                  
               </div>
               <div class="d-flex flex-row align-items-center">
-                <span class="strike-text">{{ "${:,.2f}".format(oferta.antes.price) }}</span>
+                <span class="strike-text">Antes: {{ "${:,.2f}".format(oferta.antes.price) }}</span>
             </div>
               <h6 class="text-success">Dif: {{ "${:,.2f}".format(oferta.diff) }}</h6>
               <div class="d-flex flex-column mt-4">
